--- a/exercice.css
+++ b/exercice.css
@@ -9,6 +9,7 @@
    }
 
 
+
 #bloc-page
 {
    width: 900px;
@@ -19,6 +20,7 @@
     
 }
 
+
 header
 {
     display:flex;
@@ -26,6 +28,7 @@ header
     background-color: #0475ba;
     color: white;
     height:72px
+    marg
 }
 header h1
 {
@@ -66,14 +69,17 @@ nav a
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
-
+    margin-left: 20%;
 }
+
+
 
 
 #profil h2 
 {
     font-size: 1.3em;
     color: black;
+
 
 }
 
@@ -84,45 +90,68 @@ nav a
 
 }
 
-/*
+
 .monimage 
 
 {
-    
-    margin-right: 50%;
+ margin-top:40px;   
 }
-*/
+
 .monimage img
 {
     border-radius: 50%;
     height: 150px; /*hauteur*/
-    width: 150px; /*largeur*/
-  /* margin-right:  50%;*/
+    width:200px; /*largeur*/
+   margin-right: 200px;
 }
 
 #presentation
 {
     color: white;
     background-color: #0475ba;
-    
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 #presentation h1
 {
-    text-align: center;
-
+    margin-left: 20%;
+   
 }
  
 #presentation li
 {
-    margin-left: 8em ; 
+    margin-left: 20%;
 }
 	
-#experiences-professionnelles h1
+#experiences-professionnelles 
 {
-color: mediumblue;
-text-align: center;
+    display: flex;
+    
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+    background-color: white;
+    margin-left: 20%;
+    margin-right: 10%;
+    
 }
+.titre 
+{
+    
+    width: 100%;
+    color:#0475ba ;
+    
+}
+.annee-carrefour
+{
+    font-weight: bold;
+}
+.annee-psychologue
+{
+    font-weight: bold;
+}
+
 
 #mes-formations
 {
@@ -133,3 +162,41 @@ text-align: center;
 {
     text-align: center;
 } 
+
+#passions
+{
+    background-color:white ;
+    color:#0475ba ;
+}
+#passions h1
+{
+    text-align: center;
+}
+#passions ul
+{
+    color: black;
+}
+footer
+{
+    display: flex;
+    background-color:#0475ba ;
+    flex-wrap: wrap;
+    gap: 250px;
+     
+}
+
+
+#titres
+{
+
+    color: white;
+    text-align: middle;
+    text-decoration: underline;
+    margin-left: 3%;
+}
+
+.link
+{
+    color: white;
+
+}
