--- a/exercice.css
+++ b/exercice.css
@@ -69,6 +69,7 @@ nav a
     flex-direction: row;
     align-items: center;
     margin-left: 20%;
+    
 }
 
 
@@ -93,7 +94,7 @@ nav a
 .monimage 
 
 {
- margin-top:40px;   
+ margin-top: 40px;  
 }
 
 .monimage img
@@ -102,6 +103,7 @@ nav a
     height: 150px; /*hauteur*/
     width:200px; /*largeur*/
    margin-right: 200px;
+
 }
 
 #presentation
@@ -214,8 +216,10 @@ footer
     text-align: middle;
     text-decoration: underline;
     margin-left: 3%;
+
     
 }
+
 
 
 #titres  a
@@ -314,6 +318,8 @@ footer
 .link
 {
     margin-left: 3%;
+    align-items: flex-start;
+
 }
 
 
